dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gagansaini
  namespace: ingress-nginx
  labels:
    app: django
spec:
  selector:
    matchLabels:
      app: django
  replicas: 2
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: gagansaini
        image: sainigagan29/kubernetes:1
        ports:
        - containerPort: 8000
